<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LeFlix</string>
    <string name="title_home">Series</string>
    <string name="title_search">Search</string>
    <string name="title_watch_list">My List</string>
    <string name="title_show_details">Show details</string>
    <string name="title_episode_details">Episode details</string>
    <string name="seasons_count">%s Seasons</string>
    <string name="episode_name">%s. %s</string>
    <string name="episode_runtime">%dm</string>
    <string name="episode_season_and_number">Season %d: Episode %d</string>
    <string name="empty_favorites">You didn\'t add any show to your watch list. \n\nAdd now and stop losing good fun.</string>
    <string name="error">Error</string>
    <string name="error_message">A error happened. Try again later</string>
    <string name="try_again">Try again</string>
</resources>