<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cvaccari.features.home.presentation.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_show_details"
            app:destination="@id/navigation_show_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.cvaccari.features.search.presentation.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/search_fragment" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_show_details"
            app:destination="@id/navigation_show_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.cvaccari.features.favorities.presentation.FavoritesFragment"
        android:label="@string/title_watch_list"
        tools:layout="@layout/favorites_fragment" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_show_details"
            app:destination="@id/navigation_show_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_show_details"
        android:name="com.cvaccari.features.showdetails.presentation.ShowDetailsFragment"
        android:label="@string/title_show_details"
        tools:layout="@layout/show_details_fragment">
        <argument
            android:name="showInfoModel"
            app:argType="com.cvaccari.features.search.data.model.ShowInfoModel"
            app:nullable="false" />
    </fragment>

</navigation>